--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "base64-js": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "material-ui-confirm": "^3.0.9",
     "moment": "^2.29.4",
